# updfparser

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: CTestConfig.cmake  Config.cmake.in  Info.plist.in  MultiCPackConfig.cmake  README.txt  Welcome.txt  config.h.in
include/: CMakeLists.txt  uPDFObject.h  uPDFParser.h  uPDFParser_common.h  uPDFTypes.h
src/: CMakeLists.txt  uPDFParser.cpp  uPDFTypes.cpp
tests/: CMakeLists.txt  test.cpp
